# otus-cpp-professional-hw02-ip-filter

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
docker/: Dockerfile
scripts/: build.sh  clang_tidy.sh  clean.sh  common.sh  cppcheck.sh  dev.sh  ensure_docker.sh  ensure_image.sh  logging.sh  make.sh  project.sh  run.sh  test.sh
scripts/lib/: config.sh  docker.sh  logging.sh
src/: ip_address.cpp  ip_address.h  ip_algorithms.cpp  ip_algorithms.h  ip_algorithms.tpp  ip_filter.cpp  ip_filter.h  main.cpp
tests/: ip_address_test.cpp  self_check.sh
tests/gtest/: ip_filter_test.cpp
